# vpp-learning

./: .gitignore  .gitmodules  Agent_dqn_state_dict_18.mdl  README.md  VG07_6_fruits.binvox  __init__.py  action_space.py  agent_ppo.py  buffer.obj.REMOVED.git-id  cartpole.py  cartpole2.py  compile_p3d_modules.bat  compile_p3d_modules.sh  compile_pybind11_only.bat  compile_pybind11_only.sh  compile_pybind11_only_windows.sh  config.py  dqn.py  evaluate_circular_policy.sh  evaluate_circular_policy2.sh  evaluate_circular_policy3.sh  evaluate_circular_policy4.sh  evaluate_generalization.sh  evaluate_p3d.py  evaluate_p3d.sh  evaluate_p3d_4.sh  evaluate_p3d_6.sh  evaluate_p3d_8.sh  evaluate_p3d_circular.sh  evaluate_p3d_multi_env.sh  evaluate_p3d_random.sh  evaluate_p3d_rl_400x400x150.sh  evaluate_random_policy.sh  evaluate_random_policy2.sh  evaluate_ros_rl.sh  evaluate_world14_static.sh  example_3d.py  field_env.py  field_env_3d.py  field_env_3d_gui.py  (+238 more)
agent/: agent_ddpg.py  agent_dqn.py  agent_dqn2.py  agent_dqn3.py  agent_dqn4.py  agent_hierarchical_dqn.py  agent_my_ppo2.py  agent_my_ppo3.py  agent_ppo.py  agent_ppo_3d_known_map.py  agent_ppo_3d_unknown_map.py  agent_ppo_lstm.py  agent_ppo_lstm_3d_unknown_map.py  random_agent.py  random_agent_3d.py
agent_pfrl/: agent_builder.py  agent_type.py  network.py
agents/: Base_Agent.py  Base_Agent_AC.py  Base_Agent_DQN.py  Model_Helper.py  Trainer.py  VAE_Learner.py  __init__.py  policies.py
capnp/: action.capnp  action.capnp.c++  action.capnp.h  (+15 more)
pybind11_test/: CMakeLists.txt  CMakeSettings.json  field_env_3d_helper.cpp
(+412 files in other folders)
